# todo-dos-computeiros

./: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp
test/: CMakeLists.txt
test/source/: todo-dos-computeiros_test.cpp
