cmake_minimum_required(VERSION 3.14)

include(cmake/prelude.cmake)

project(
    todo-dos-computeiros
    VERSION 1.0.0
    DESCRIPTION "Short description"
    HOMEPAGE_URL "https://example.com/"
    LANGUAGES CXX
)

include(cmake/project-is-top-level.cmake)
include(cmake/variables.cmake)

# ---- Declare library ----

add_library(
    todo-dos-computeiros_lib OBJECT
    source/lib.cpp
)

target_include_directories(
    todo-dos-computeiros_lib ${warning_guard}
    PUBLIC
    "\$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/source>"
)

target_compile_features(todo-dos-computeiros_lib PUBLIC cxx_std_20)

find_package(fmt REQUIRED)
target_link_libraries(todo-dos-computeiros_lib PRIVATE fmt::fmt)

# ---- Declare executable ----

add_executable(todo-dos-computeiros_exe source/main.cpp)
add_executable(todo-dos-computeiros::exe ALIAS todo-dos-computeiros_exe)

set_property(TARGET todo-dos-computeiros_exe PROPERTY OUTPUT_NAME todo-dos-computeiros)

target_compile_features(todo-dos-computeiros_exe PRIVATE cxx_std_20)

target_link_libraries(todo-dos-computeiros_exe PRIVATE todo-dos-computeiros_lib)

# ---- Install rules ----

if(NOT CMAKE_SKIP_INSTALL_RULES)
  include(cmake/install-rules.cmake)
endif()

# ---- Developer mode ----

if(NOT todo-dos-computeiros_DEVELOPER_MODE)
  return()
elseif(NOT PROJECT_IS_TOP_LEVEL)
  message(
      AUTHOR_WARNING
      "Developer mode is intended for developers of todo-dos-computeiros"
  )
endif()

include(cmake/dev-mode.cmake)
